--- a/index.html
+++ b/index.html
@@ -188,37 +188,37 @@
       <div class="row">
         <div class="col-lg-3 col-md-4">
           <div class="icon-box">
-            <i class="ri-book-3-line" style="color: #ffbb2c;"></i>
+            <i class="ri-book-3-line" style="color: #18d26e;"></i>
             <h3>Reading A Books</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
           <div class="icon-box">
-            <i class="ri-camera-lens-fill" style="color: #5578ff;"></i>
+            <i class="ri-camera-lens-fill" style="color: #18d26e;"></i>
             <h3>Photography</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4 mt-md-0">
           <div class="icon-box">
-            <i class="ri-quill-pen-line" style="color: #e80368;"></i>
+            <i class="ri-quill-pen-line" style="color: #18d26e;"></i>
             <h3>Learning new Skills</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4 mt-lg-0">
           <div class="icon-box">
-            <i class="ri-hand-heart-line" style="color: #47aeff;"></i>
+            <i class="ri-hand-heart-line" style="color: #18d26e;"></i>
             <h3>Charity</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
-            <i class="ri-disc-line" style="color: #ffa76e;"></i>
+            <i class="ri-disc-line" style="color: #18d26e;"></i>
           <h3>Music</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
-            <i class="ri-gamepad-line" style="color: #11dbcf;"></i>
+            <i class="ri-gamepad-line" style="color: #18d26e;"></i>
             <h3>Gaming</h3>
           </div>
           </div>
